--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/facebook": "^5.8.0",
     "@ionic-native/google-plus": "^5.8.0",
+    "@ionic-native/network": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -34,6 +35,7 @@
     "cordova-android": "8.0.0",
     "cordova-plugin-facebook4": "4.2.1",
     "cordova-plugin-googleplus": "7.0.2",
+    "cordova-plugin-network-information": "2.0.1",
     "core-js": "^2.5.4",
     "firebase": "^6.1.1",
     "google-libphonenumber": "^3.2.2",
@@ -95,7 +97,8 @@
         "APP_NAME": "Saloo",
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.40.0"
-      }
+      },
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android"
