--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
+    "@angular-material-extensions/google-maps-autocomplete": "^1.6.1",
+    "@angular/animations": "^7.2.2",
+    "@angular/cdk": "~7.3.7",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
@@ -38,11 +43,15 @@
     "cordova-plugin-network-information": "2.0.1",
     "core-js": "^2.5.4",
     "firebase": "^6.1.1",
+    "geofirex": "0.0.6",
     "google-libphonenumber": "^3.2.2",
+    "hammerjs": "^2.0.8",
     "ng-circle-progress": "^1.4.1",
+    "ng-starrating": "^1.0.6",
     "rxjs": "~6.5.1",
     "toastr": "^2.1.4",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -56,6 +65,7 @@
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
     "@ionic/lab": "2.0.2",
+    "@types/googlemaps": "^3.36.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.0.0",
