--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "cordova-plugin-network-information": "2.0.1",
     "core-js": "^2.5.4",
     "firebase": "^6.1.1",
+    "font-awesome": "^4.7.0",
     "geofirex": "0.0.6",
     "google-libphonenumber": "^3.2.2",
     "hammerjs": "^2.0.8",
     "ng-circle-progress": "^1.4.1",
     "ng-starrating": "^1.0.6",
+    "ngx-gallery": "^5.10.0",
     "rxjs": "~6.5.1",
     "toastr": "^2.1.4",
     "tslib": "^1.9.0",
