--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cordova-plugin-network-information": "2.0.1",
     "core-js": "^2.5.4",
     "firebase": "^6.1.1",
+    "firebase-functions": "^3.1.0",
     "font-awesome": "^4.7.0",
     "geofirex": "0.0.6",
     "google-libphonenumber": "^3.2.2",
