--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@google/maps": "^0.5.5",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/facebook": "^5.8.0",
     "@ionic-native/google-plus": "^5.8.0",
